--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"trustedDependencies": ["@biomejs/biome"],
 	"dependencies": {
+		"@effect/platform-bun": "^0.60.7",
 		"effect": "^3.14.2"
 	}
 }
