--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
 	"[json][jsonc][typescript]": {
 		"editor.defaultFormatter": "biomejs.biome"
-	}
+	},
+	"typescript.tsdk": "node_modules/typescript/lib"
 }
