--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
-		"@types/bun": "latest"
+		"@effect/language-service": "^0.5.1",
+		"@types/bun": "latest",
+		"typescript": "^5.8.3"
 	},
 	"trustedDependencies": ["@biomejs/biome"],
 	"dependencies": {
