--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,3 @@
 {
-    "recommendations": [
-        "biomejs.biome",
-        "effectful-tech.effect-vscode"
-    ]
+	"recommendations": ["biomejs.biome", "effectful-tech.effect-vscode"]
 }
