--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
 	"dependencies": {
 		"@effect/platform-bun": "^0.60.7",
 		"effect": "^3.14.2"
+	},
+	"patchedDependencies": {
+		"effect@3.14.2": "patches/effect@3.14.2.patch"
 	}
 }
