--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
 	"type": "module",
 	"scripts": {
 		"dev": "bun run --watch app/main.ts",
+		"dev:client": "bun run --watch app/client/index.tsx",
 		"format": "biome format --write ."
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
 		"@effect/language-service": "^0.16.1",
 		"@types/bun": "^1.2.13",
+		"@types/react": "18",
+		"ink": "^5.2.1",
+		"react": "18",
 		"typescript": "^5.8.3"
 	},
 	"trustedDependencies": ["@biomejs/biome"],
