add nicer autoimporting with effect lsp

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,9 +30,9 @@
 		},
 		"plugins": [
 			{
-				"name": "@effect/language-service"
+				"name": "@effect/language-service",
+				"barrelImportPackages": ["effect"]
 			}
 		]
-	},
-	"exclude": ["./playground.ts"]
+	}
 }
