--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,8 @@
 		"plaintext": false,
 		"markdown": false,
 		"scminput": false
+	},
+	"editor.codeActionsOnSave": {
+		"source.organizeImports.biome": "always"
 	}
 }
