--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"format": "biome format --write ."
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^1.9.4",
+		"@biomejs/biome": "^2.0.6",
 		"@effect/experimental": "^0.48.12",
 		"@effect/language-service": "^0.23.0",
 		"@types/bun": "^1.2.13",
@@ -17,7 +17,9 @@
 		"react": "18",
 		"typescript": "^5.8.3"
 	},
-	"trustedDependencies": ["@biomejs/biome"],
+	"trustedDependencies": [
+		"@biomejs/biome"
+	],
 	"dependencies": {
 		"@effect/platform-bun": "^0.60.22",
 		"effect": "^3.15.2"
