remove agents reference from vscode search

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,8 @@
 	},
 	"editor.codeActionsOnSave": {
 		"source.organizeImports.biome": "always"
+	},
+	"search.exclude": {
+		".agents/reference": true
 	}
 }
