--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
 	"name": "@codecrafters/redis",
 	"description": "Build your own Redis challenge, from CodeCrafters",
 	"type": "module",
+	"engines": {
+		"bun": "1.3.3"
+	},
 	"scripts": {
 		"dev": "bun run --watch app/main.ts",
 		"dev:client": "bun run --watch app/client/index.tsx",
