--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"@effect/platform": "^0.93.6",
 		"@effect/platform-bun": "^0.86.0",
 		"arkregex": "0.0.4",
-		"effect": "^3.19.8"
+		"effect": "^3.19.8",
+		"js-crc": "^0.3.1"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.8",
